--- a/layers/meta-balena-xilinx/conf/samples/bblayers.conf.sample
+++ b/layers/meta-balena-xilinx/conf/samples/bblayers.conf.sample
@@ -12,7 +12,9 @@ BBLAYERS ?= " \
     ${TOPDIR}/../layers/meta-openembedded/meta-filesystems \
     ${TOPDIR}/../layers/meta-openembedded/meta-networking \
     ${TOPDIR}/../layers/meta-openembedded/meta-python \
-    ${TOPDIR}/../layers/meta-xilinx \
+    ${TOPDIR}/../layers/meta-xilinx/meta-xilinx-bsp \
+    ${TOPDIR}/../layers/meta-xilinx/meta-xilinx-standalone \
+    ${TOPDIR}/../layers/meta-xilinx/meta-xilinx-contrib \
     ${TOPDIR}/../layers/meta-balena/meta-balena-common \
     ${TOPDIR}/../layers/meta-balena/meta-balena-warrior \
     ${TOPDIR}/../layers/meta-balena-xilinx \
