implemented layer.conf

--- a/layers/meta-balena-xilinx/conf/layer.conf
+++ b/layers/meta-balena-xilinx/conf/layer.conf
@@ -1,1 +1,16 @@
-# TODO: implement this
+BBPATH .= ":${LAYERDIR}"
+
+BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
+            ${LAYERDIR}/recipes-*/*/*.bbappend"
+
+BBFILE_COLLECTIONS += "zedboard-zynq7"
+BBFILE_PATTERN_zedboard-zynq7 := "^${LAYERDIR}/"
+BBFILE_PRIORITY_zedboard-zynq7 = "1337"
+LAYERSERIES_COMPAT_zedboard-zynq7 = "warrior"
+
+BBFILE_COLLECTIONS += "qemu-zynq7"
+BBFILE_PATTERN_qemu-zynq7 := "^${LAYERDIR}/"
+BBFILE_PRIORITY_qemu-zynq7 = "1337"
+LAYERSERIES_COMPAT_qemu-zynq7 = "warrior"
+
+DISTRO_FEATURES_append += " systemd"
