added tmp resin-image recipe and added patches

--- a/layers/meta-balena-xilinx/conf/layer.conf
+++ b/layers/meta-balena-xilinx/conf/layer.conf
@@ -14,3 +14,6 @@ BBFILE_PRIORITY_qemu-zynq7 = "1337"
 LAYERSERIES_COMPAT_qemu-zynq7 = "warrior"
 
 DISTRO_FEATURES_append += " systemd"
+
+# PATCHES
+BALENA_STORAGE += " aufs" # is this trully needed?
