--- a/layers/meta-balena-xilinx/conf/layer.conf
+++ b/layers/meta-balena-xilinx/conf/layer.conf
@@ -16,4 +16,5 @@ LAYERSERIES_COMPAT_qemu-zynq7 = "warrior"
 DISTRO_FEATURES_append += " systemd"
 
 # PATCHES
-BALENA_STORAGE += " aufs" # is this trully needed?
+# is BALENA_STORAGE definition trully needed?
+BALENA_STORAGE += " aufs"
