--- a/layers/meta-balena-xilinx/conf/samples/bblayers.conf.sample
+++ b/layers/meta-balena-xilinx/conf/samples/bblayers.conf.sample
@@ -19,4 +19,5 @@ BBLAYERS ?= " \
     ${TOPDIR}/../layers/meta-balena/meta-balena-warrior \
     ${TOPDIR}/../layers/meta-balena-xilinx \
     ${TOPDIR}/../layers/meta-rust \
+    ${TOPDIR}/../layers/oe-meta-go \
     "
