BALENA_STORAGE=overlay2 to avoid type error

--- a/layers/meta-balena-xilinx/conf/layer.conf
+++ b/layers/meta-balena-xilinx/conf/layer.conf
@@ -17,4 +17,6 @@ DISTRO_FEATURES_append += " systemd"
 
 # PATCHES
 # is BALENA_STORAGE definition trully needed?
-BALENA_STORAGE += " aufs"
+# for some reason the do_kernel_resin_aufs_fetch_and_unpack shows an error when uses
+# python-variable:balena_storage -> Exception: TypeError: must be str, not NoneType
+BALENA_STORAGE = "overlay2"
