builder: removed chwon  layer

--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -33,5 +33,4 @@ RUN ["/usr/bin/distro-entry.sh", "/usr/bin/dumb-init", "--", "/usr/bin/poky-entr
 RUN usermod -aG docker pokyuser
 
 # Install project inside image
-COPY . /workdir/
-RUN chown -R pokyuser:pokyuser /workdir/
+COPY --chown=pokyuser:pokyuser . /workdir/
